# smart-glasses-charger

./: .gitignore  CONTEXT.md  README.md
docs/: REQUIREMENT_TRACEABILITY.md
docs/schematic/: GD32E230C8T6_pin_assignment.xlsx
docs/sdk/: GD32E23x_AddOn_V2.5.0.7z
docs/spec/: dual_pin_timing_v0.1.xlsx  functional_analysis.docx  product_requirement_v0.1.xlsx
firmware/: .clang-format  CMakeLists.txt
firmware/Drivers/CMSIS/: system_gd32e23x.c
firmware/src/: main.c
firmware/src/app/: aux_logic.c  aux_logic.h  button.c  button.h  charge_flow.c  charge_flow.h  led_effect.c  led_effect.h  ota_flow.c  ota_flow.h  power_mgmt.c  power_mgmt.h  state_machine.c  state_machine.h
firmware/src/drivers/: cw2017.c  cw2017.h  ip5353.c  ip5353.h  led.c  led.h  mt5706.c  mt5706.h
firmware/src/hal/: hal_exti.c  hal_exti.h  hal_fwdgt.c  hal_fwdgt.h  hal_gpio.c  hal_gpio.h  hal_i2c.c  hal_i2c.h  hal_pinmux.h  hal_pwr.c  hal_pwr.h  hal_timer.c  hal_timer.h  hal_usart.c  hal_usart.h
firmware/src/protocol/: at_crc.c  at_crc.h  at_frame.c  at_frame.h  at_opcode.h  at_types.h
firmware/tests/: CMakeLists.txt  test_charge_flow.c  test_gpio_config.c  test_protocol.c  test_state_machine.c
firmware/tests/common/: test_assert.h
firmware/tests/mock/: gd32e23x.h  mock_spl.c  mock_spl.h  mock_spl_main.c  mock_stubs.c
